<resources>
    <string name="app_name">Apple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">helloworld</string>
    <string name="start">hi start</string>
    <string name="end">hi end</string>
    <string name="text2">the text2</string>
    <string name="ticket">ticket broadcast</string>
    <string name="insert">插入</string>
    <string name="query">查询</string>
    <string name="querys">查询所有数据</string>
    <string name="update">修改</string>
    <string name="delete">删除</string>
    <string name="login">登陆</string>
    <string name="password">密码</string>
    <string name="phoneName"><电话></电话></string>
</resources>
