<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="jewelry.apple.Main5Activity">

    <Button
        android:id="@+id/insert"
        android:text="@string/insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
   <Button
        android:id="@+id/query"
        android:text="@string/query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
       android:layout_below="@+id/insert"/>
    <Button
        android:id="@+id/querys"
        android:text="@string/querys"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/query"/>
    <Button
        android:id="@+id/update"
        android:text="@string/update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/querys"/>
    <Button
        android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update"/>

</RelativeLayout>
